2007-06-28  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncManager.cs: Handling note deletions from server
	  differently (no longer given in server.GetNoteUpdatesSince).
	* Tomboy/FileSystemSyncServer.cs: Fixed deletion.  Start of work on
	  step #8 as described in
	  http://bugzilla.gnome.org/show_bug.cgi?id=321037#c17 (see TODOs).
	* Tomboy/Note.cs, Tomboy/TomboySyncClient.cs: Use Note.Id to get note
	  GUID.

2007-06-28  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncManager.cs: Wrap note update loop in
	  Gtk.Application.Invoke for thread safety.

2007-06-27  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncManager.cs: Set note revision after updating note XML from
	  server.
	* Tomboy/Note.cs: Apply fix for bug #440562 from John Carr, so that
	  setting the Note.XmlContent property formats notes properly. 
	  LoadForeignNoteXml now sets note content via the XmlContent
	  property.

2007-06-27  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncManager.cs, Tomboy/Note.cs, Tomboy/TomboySyncClient.cs:
	  Note revision now stored in the client's local manifest.xml,
	  instead of being coupled with the note data.

2007-06-27  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/SyncManager.cs: Set syncThread to null before returning from
	  the sync thread method.  This is important because if it's not
	  null, it won't sync properly the next time around.

2007-06-27  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncManager.cs: Bringing back clobbered change (adding new
	  notes with NoteMgr.CreateWithGuid followed by
	  note.LoadForeignNoteXml).

2007-06-27  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/SyncDialog.cs: Moved TitleConflictResolution to
	  SyncTitleConflictResolution.
	* Tomboy/SyncManager.cs: Renamed
	  SyncTitleConflictDialog.TitleConflictResolution ->
	  SyncTitleConflictResolution.

2007-06-27  Boyd Timothy <btimothy@gmail.com> 
